Overflow fix

--- a/css/sass/partials/_home.scss
+++ b/css/sass/partials/_home.scss
@@ -37,8 +37,15 @@
   }
 }
 
+.shape-inner-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
 .entry-content {
   overflow: hidden;
+  min-height: 100vh;
 
   .face {
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
@@ -162,11 +169,11 @@ $deg: 360deg;
     transform-style: preserve-3d;
   }
   .scene {
-    width: 80em;
-    height: 80em;
+    width: $shape-width;
+    height: $shape-width;
     top: 50%;
     left: 50%;
-    margin: -40em 0 0 -40em;
+    margin: (-$shape-width/2) 0 0 (-$shape-width/2);
   }
   .shape {
     top: 50%;
@@ -270,11 +277,11 @@ $deg: 360deg;
     transform-style: preserve-3d;
   }
   .scene {
-    width: 80em;
-    height: 80em;
+    width: $shape-width;
+    height: $shape-width;
     top: 50%;
     left: 50%;
-    margin: -40em 0 0 -40em;
+    margin: (-$shape-width/2) 0 0 (-$shape-width/2);
   }
   .shape {
     top: 50%;
@@ -378,11 +385,11 @@ $deg: 360deg;
     transform-style: preserve-3d;
   }
   .scene {
-    width: 80em;
-    height: 80em;
+    width: $shape-width;
+    height: $shape-width;
     top: 50%;
     left: 50%;
-    margin: -40em 0 0 -40em;
+    margin: (-$shape-width/2) 0 0 (-$shape-width/2);
   }
   .shape {
     top: 50%;
@@ -484,11 +491,11 @@ $deg: 360deg;
     transform-style: preserve-3d;
   }
   .scene {
-    width: 80em;
-    height: 80em;
+    width: $shape-width;
+    height: $shape-width;
     top: 50%;
     left: 50%;
-    margin: -40em 0 0 -40em;
+    margin: (-$shape-width/2) 0 0 (-$shape-width/2);
   }
   .shape {
     top: 50%;
